# primerosPasosLAE

./: README.md
test/: pyproject.toml
test/viernes/: pyproject.toml
test/viernes/dataset/: WA_Fn-UseC_-Telco-Customer-Churn.ods
test/viernes/notebooks/: analisys.ipynb  entrenamientoSinTratar.ipynb  limpiezaDeDatos.ipynb  opimizacion1.ipynb  opimizacion2.ipynb  prueba.ipynb
